# rust-crud-actix-mongo-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  run.sh
src/: errors.rs  main.rs  security.rs  test_controller.rs
src/auth/: controller.rs  models.rs  service.rs
src/environment/: mod.rs
src/users/: controller.rs  mod.rs  models.rs  service.rs
